# IKuYo

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  backend_code_review.md  config.py  config.yaml  database.py  items.py  main.py  middlewares.py  mikan.py  mikan_spider.py  models.py  pipelines.py  pyproject.toml  requirements.txt  scrapy.cfg  settings.py
docs/: CRAWL_MODES_USAGE.md  PROJECT_MANAGEMENT.md  SCHEDULER_USAGE.md
frontend/: .env  README.md  vite.config.ts
frontend/src/: App.vue  main.ts
frontend_code_review_cn/: AboutView_vue_review.md  AnimeCard_vue_review.md  AnimeDetailView_vue_review.md  AnimeResourcesList_vue_review.md  AppHeader_vue_review.md  EpisodeCarousel_vue_review.md  EpisodeDetailModal_vue_review.md  EpisodeDisplay_vue_review.md  EpisodeGrid_vue_review.md  HomeView_vue_review.md  ResourceLibraryView_vue_review.md  ScheduledJobModal_vue_review.md  ScheduledJobTable_vue_review.md  ScrollToTopButton_vue_review.md  TaskManagementView_vue_review.md  TaskModal_vue_review.md  TaskTable_vue_review.md  WeekNavigation_vue_review.md  api_ts_review.md  crawlerApiService_ts_review.md  debounce_ts_review.md  homeStore_ts_review.md  scrollUtils_ts_review.md  searchStore_ts_review.md  taskStore_ts_review.md  taskUtils_ts_review.md
ikuyo/: __init__.py  worker.py
ikuyo/api/: __init__.py  app.py  main.py
ikuyo/core/: bangumi_service.py  (+6 more)
ikuyo_scrapy/: config.py  scrapy.cfg
scripts/: manage_scheduler.py  run_api.py  run_crawler.py  run_server.py  run_single_spider.py  run_worker.py
spiders/: mikan.py
src/: __init__.py  config.py
(+117 files in other folders)
