[project]
name = "ikuyo"
version = "0.1.0"
description = "动画爬虫，获取种子资源"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "cachetools>=5.3.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scrapy>=2.13.2",
    "uvicorn[standard]>=0.34.3",
    "sqlmodel>=0.0.16",
]
